[package]
name = "secure-p2p-transport"
version = "0.2.0"
edition = "2021"
publish = false
license = "Apache 2.0"

[dependencies]
iroh = { version = "0.29", features = ["discovery-local-network", "discovery-pkarr-dht"] }
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
